log
Thu May 12 11:25:22 HSP 2022: 
 tests:  0|5
total_score: 0/70
eef4bee
Thu May 12 11:27:28 HSP 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  2|4
total_score: 15/70
1c4e72d
Sat May 14 16:27:22 HSP 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'recorrer_ileras':
sudoku.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d39d1b6
Sat May 14 16:27:44 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
47f77d2
Sat May 14 16:43:10 HSP 2022: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'recorrer_sub':
sudoku.c:58:13: error: 'n' redeclared as different kind of symbol
   int k,l,m,n;
             ^
sudoku.c:57:24: note: previous definition of 'n' was here
 int recorrer_sub(Node* n,int i,int j){
                        ^
sudoku.c:63:15: error: invalid type argument of '->' (have 'int')
           if(n->sudo[m+3*i][n+3*j] == n->sudo[k+3*i][l+3*j] && k != m && l != n) return 1;
               ^~
sudoku.c:63:40: error: invalid type argument of '->' (have 'int')
           if(n->sudo[m+3*i][n+3*j] == n->sudo[k+3*i][l+3*j] && k != m && l != n) return 1;
                                        ^~
Compilation failed
0bd2e40
Sat May 14 16:44:33 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
b2aec74
Sat May 14 16:45:37 HSP 2022: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|5
total_score: 0/70
381cd78
Sat May 14 16:46:06 HSP 2022: 
 sudoku.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  2|4
total_score: 15/70
3a22841
Sat May 14 16:47:49 HSP 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|5
total_score: 0/70
7d8dadd
Sat May 14 16:50:52 HSP 2022: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:94:13: error: implicit declaration of function 'printfMatriz' [-Werror=implicit-function-declaration]
             printfMatriz(n);
             ^~~~~~~~~~~~
sudoku.c: At top level:
sudoku.c:132:6: error: conflicting types for 'printfMatriz' [-Werror]
 void printfMatriz(Node *n){
      ^~~~~~~~~~~~
sudoku.c:94:13: note: previous implicit declaration of 'printfMatriz' was here
             printfMatriz(n);
             ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dd639b5
Sat May 14 16:51:21 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c:6:19: error: unknown type name 'Node'
 void printfMatriz(Node*);
                   ^~~~
sudoku.c: In function 'get_adj_nodes':
sudoku.c:95:13: error: implicit declaration of function 'printfMatriz' [-Werror=implicit-function-declaration]
             printfMatriz(n);
             ^~~~~~~~~~~~
sudoku.c: At top level:
sudoku.c:133:6: error: conflicting types for 'printfMatriz' [-Werror]
 void printfMatriz(Node *n){
      ^~~~~~~~~~~~
sudoku.c:95:13: note: previous implicit declaration of 'printfMatriz' was here
             printfMatriz(n);
             ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6bae15f
Sat May 14 16:52:06 HSP 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0f06fb5
Sat May 14 16:59:01 HSP 2022: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8986bb8
Sat May 14 17:00:39 HSP 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f4c58e2
Sat May 14 17:02:39 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
db08fc0
Sat May 14 17:03:33 HSP 2022: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|2
total_score: 45/70
6d5634e
Sat May 14 17:14:13 HSP 2022: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
72211a8
Sat May 14 17:48:59 HSP 2022: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:0:
test.c: In function 'DFS':
sudoku.c:130:3: error: 'pila' is used uninitialized in this function [-Werror=uninitialized]
   push(pila,initial);
   ^~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9506029
